# cblite-test-server

./: .gitignore  README.md  Sgr2_pull.json
CBLClient/Apps/CBLTestServer-Android/: build.gradle  build_android_testserver_app.sh  gradle.properties  settings.gradle
CBLClient/Apps/CBLTestServer-Android/app/: build.gradle
CBLClient/Apps/CBLTestServer-Android/app/gradle/wrapper/: gradle-wrapper.properties
CBLClient/Apps/CBLTestServer-Android/app/src/main/: AndroidManifest.xml
CBLClient/Apps/CBLTestServer-C/: .gitignore  CMakeLists.txt  android-key  build.gradle
CBLClient/Apps/CBLTestServer-C/build_scripts/: build_android.sh  build_cross.py  build_ios.sh  build_linux.sh  build_macos.sh  build_unix.sh  build_win_desktop.ps1
CBLClient/Apps/CBLTestServer-C/gradle/wrapper/: gradle-wrapper.properties
CBLClient/Apps/CBLTestServer-C/ios/TestServer/TestServer/: AppDelegate.swift  CBLTestServerBridge.h  CBLTestServerBridge.mm  SceneDelegate.swift  TestServer-Bridging-Header.h  ViewController.swift
CBLClient/Apps/CBLTestServer-C/ios/TestServer/TestServer.xcodeproj/: project.pbxproj
CBLClient/Apps/CBLTestServer-C/ios/TestServer/TestServer.xcodeproj/xcshareddata/xcschemes/: TestServer.xcscheme
CBLClient/Apps/CBLTestServer-C/ios/TestServer/config/: TestServer.xcconfig
CBLClient/Apps/CBLTestServer-C/shared/: CMakeLists.txt
CBLClient/Apps/CBLTestServer-C/src/: ArrayMethods.cpp  ArrayMethods.h  BasicAuthenticationMethods.cpp  BasicAuthenticationMethods.h  BlobMethods.cpp  BlobMethods.h  CollectionMethods.cpp  CollectionMethods.hpp  DataTypeMethods.cpp  DataTypeMethods.h  DatabaseConfigurationMethods.cpp  DatabaseConfigurationMethods.h  DatabaseMethods.cpp  DatabaseMethods.h  Defer.hh  Defines.h  DictionaryMethods.cpp  DictionaryMethods.h  DocumentMethods.cpp  DocumentMethods.h  EncryptableMethods.cpp  EncryptableMethods.h  FileLoggingMethods+Apple.mm  FileLoggingMethods.cpp  FileLoggingMethods.h  FilePathResolver+Apple.mm  FilePathResolver+Desktop.cpp  FilePathResolver.h  FleeceHelpers.cpp  FleeceHelpers.h  MemoryMap.cpp  MemoryMap.h  QueryMethods.cpp  QueryMethods.h  ReplicatorConfigurationMethods.cpp  ReplicatorConfigurationMethods.h  ReplicatorMethods.cpp  ReplicatorMethods.h  Response.cpp  Response.h  (+13 more)
CBLClient/Apps/CBLTestServer-C/src/Android/: DummyLoader.cpp  FilePathResolver+Android.cpp  MainActivity.cpp
CBLClient/Apps/CBLTestServer-C/src/main/: AndroidManifest.xml
CBLClient/Apps/CBLTestServer-C/src/main/res/values/: strings.xml
CBLClient/Apps/CBLTestServer-Dotnet/: NuGet.config
CBLClient/Apps/CBLTestServer-Dotnet/TestClient/: TestClient.csproj
CBLClient/Apps/CBLTestServer-Dotnet/TestServer/: .DatabaseMethods.cs.swp  .TestServer.cs.swp  .TestServer.csproj.sb-172c9c51-F0EiB.swp  .TestServer.csproj.sb-172c9c51-F0EiBP.swp  .TestServer.csproj.sb-172c9c51-F0EiBP.swp.swp  .TestServer.csproj.swp  BlobMethods.cs  CertificateRequest.cs  CollectionMethods.cs  DatabaseMethods.cs  DocumentMethods.cs  ListenerAuthenticatorMethods.cs  MemoryMap.cs  P2PMethods.cs  QueryMethods.cs  ReplicationMethods.cs  ReplicatorConfigurationMethods.cs  Router.cs  ScopeMethods.cs  TLSHelperUtil.cs  TestServer.csproj  TestServer.sln  ValueSerializer.cs  VectorSearchMethods.cs
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.Android/: MainActivity.cs  TestServer.Android.csproj  build.ps1  packages.config
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.Android/Resources/: Resource.Designer.cs
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.Framework/: OrchestrationMethods.cs  Program.cs  TestServer.Framework.csproj  build.ps1  packages.config
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.Framework/Properties/: AssemblyInfo.cs  Resources.Designer.cs
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  TestServer.Maui.csproj  TestServer.Maui.sln  TestServer.Maui_TemporaryKey.pfx  build_all.ps1  build_non_apple.ps1  run.ps1  stop.ps1
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.NetCore/: .TestServer.NetCore.csproj.swp  .build.ps1.swp  Program.cs  TestServer.NetCore.csproj  build.ps1
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.NetCore/Databases/travel-sample-2.8.0.cblite2/: db.sqlite3-shm
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.UWP/: App.xaml.cs  MainPage.xaml.cs  Package.appxmanifest  TestServer.UWP.csproj  TestServer.UWP_TemporaryKey.pfx  build.ps1  run.ps1
CBLClient/Apps/CBLTestServer-Dotnet/TestServer.iOS/: AppDelegate.cs  Info.plist  TestServer.iOS.csproj  TestServer.iOS.sln
CBLClient/Apps/CBLTestServer-Java-Desktop/: build.gradle  build_java_desktop_testserver_app.sh  daemon_manager.sh
CBLClient/Apps/CBLTestServer-Java-WS/: build.gradle
CBLClient/Apps/CBLTestServer-iOS/: Cartfile  Cartfile.resolved  build_ios_testserver_app.sh
CBLClient/Apps/CBLTestServer-iOS/CBLTestServer-iOS/: Info.plist  ViewController.swift
CBLClient/Apps/CBLTestServer-iOS/CBLTestServer-iOS.xcodeproj/: project.pbxproj
CBLClient/Apps/CBLTestServer-iOS/CBLTestServer-iOS/Server/: ArrayRequesthandler.swift  BlobRequestHandler.swift  CollectionRequestHandler.swift  DatabaseConfigurationRequestHandler.swift  DatabaseRequestHandler.swift  DictionaryRequestHandler.swift  DocumentRequestHandler.swift  ExpressionRequestHandler.swift  FunctionRequestHandler.swift  ListenerAuthenticatorRequestHandler.swift  PeerToPeerRequestHandler.swift  PredictiveQueriesRequestHandler.swift  QueryRequestHandler.swift  ReplicatorConfigurationRequestHandler.swift  ReplicatorRequestHandler.swift  ReplicatorTcpClientConnection.swift  ReplicatorTcpConnection.swift  ReplicatorTcpListener.swift  ReplicatorTcpServerConnection.swift  ScopeRequestHandler.swift  SelectResultRequestHandler.swift  Server.swift  ValueSerializer.swift  VectorSearchRequestHandler.swift
CBLClient/Apps/CBLTestServer-iOS/Databases/travel-sample-2.7.0.cblite2/: db.sqlite3-shm
CBLClient/Apps/CBLTestServer-iOS/Files/: tokenizer_config.json
resources/sync_gateway_cert/: sg_cert.cer
(+37 files in other folders)
